--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "morgan": "^1.10.0"
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.13.2",
+    "morgan": "^1.10.0",
+    "static": "^2.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
+    "eslint": "^9.25.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "nodemon": "^3.1.9"
   }
 }
